add js to determine if a letter is a vowel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-         <h1>Pig Latin</h1><br>
+         <h1>igPay atinLay!</h1><br>
+         <h3></h3>
          <form class="form-group">
            <label for="sentence">Enter a sentence to translate:</label>
            <input type="text" class="form-control" id="sentence"><hr>
